--- a/index.html
+++ b/index.html
@@ -27,25 +27,48 @@ class Vec3
     }
 
     // Subtract other vector from this one and return the result
-    minus(other){}
+    minus(other)
+    {
+        return new Vec3(this.x - other.x, this.y - other.y, this.z - other.z)
+    }
 
     // Multiply other vector by this one and return the result
-    multiply(other){}
+    multiply(other)
+    {
+        return new Vec3(this.x * other.x, this.y * other.y, this.z * other.z)
+    }
 
     // Scale this vector by the number scalar and return the result
-    scale(scalar){}
+    scale(scalar)
+    {
+        return new Vec3(this.x * scalar, this.y * scalar, this.z * scalar)
+    }
     
     // Calculate the dot product of this vector with the other and return the result
-    dot(other) {}
+    dot(other)
+    {
+        return (this.x * other.x) + (this.y * other.y) + (this.z * other.z)
+    }
 
     // Calculate and return the magnitude of this vector
-    magnitude() {}
+    magnitude()
+    {
+        return Math.sqrt((this.x * this.x) + (this.y * this.y) + (this.z * this.z))
+    }
     
     // Calculate and return the magnitude of this vector without the square root
-    magnitudeSquared() {}
+    magnitudeSquared()
+    {
+        return (this.x * this.x) + (this.y * this.y) + (this.z * this.z)
+    }
 
     // Return a normalised version of this vector
-    normalised() {}
+    normalised()
+    {
+        let magnitude = Math.sqrt((this.x * this.x) + (this.y * this.y) + (this.z * this.z))
+        let unitVector = 1 / magnitude
+        return new Vec3(this.x * unitVector, this.y * unitVector, this.z * unitVector)
+    }
 }
 
 // A sphere in 3D space. Has centre, radius and colour all of which are Vec3s
@@ -62,7 +85,27 @@ class Sphere
     // a quadratic equation and return the t value of the ray for that point
     // If two solutions exist return the minus solution
     // If no solutions exist return -1
-    rayIntersects(ray)  {}
+    rayIntersects(ray)  
+    {
+        let a = ray.direction.dot(ray.direction)
+        let b = 2 * (ray.direction.dot(ray.origin.minus(this.centre)))
+        let c = (ray.origin.minus(this.centre)).dot(ray.origin.minus(this.centre)) - (this.radius * this.radius)
+
+        let discriminant = b * b - 4 * a * c
+
+        if(discriminant > 0)
+        {
+            return ((-b - Math.sqrt(discriminant)) / (2 * a))
+        }
+        else if(discriminant == 0)
+        {
+            return (-b  / (2 * a))
+        }
+        else if(discriminant < 0)
+        {
+            return -1
+        }
+    }
 }
 
 // Ray which has an origin and direction, both are Vec3s
@@ -75,7 +118,10 @@ class Ray
     }
 
     // Calculate and return the point in space (a Vec3) for this ray for the given value of t
-    pointAt(t) {}
+    pointAt(t) 
+    {
+        return new Vec3 (this.origin.add(this.direction.scale(t)))
+    }
 }
 
 // The result of casting a ray into our scene
@@ -95,7 +141,12 @@ class RayCastResult
 }
 
 // Calculate the intersection point and normal when a ray hits a sphere. Returns a RayCastResult.
-function hit(ray, t, sphereIndex) {}
+function hit(ray, t, sphereIndex)
+{
+    let intersectionPoint = ray.origin.add(ray.direction.scale(t))
+    let intersectionNormal = (intersectionPoint.minus(spheres[sphereIndex].centre).normalised())
+    return new RayCastResult(intersectionPoint, intersectionNormal, t, sphereIndex)
+}
 
 // Return a RayCastResult when a ray misses everything in the scene
 function miss()
@@ -106,13 +157,30 @@ function miss()
 // Check whether a ray hits anything in the scene and return a RayCast Result
 function traceRay(ray)
 {
-    return miss()
+    let t = 100000
+    let closestSphereIndex = -1
+
+    for (let i = 0; i < spheres.length; i++)
+    {
+        let current_t = spheres[i].rayIntersects(ray)
+        if(current_t > 0 && current_t < t)
+        {
+            t = current_t
+            closestSphereIndex = i
+        }
+    }
+
+    if(closestSphereIndex < 0) return miss()
+    return hit(ray, t, closestSphereIndex)
 }
 
 // Calculate and return the background colour based on the ray
 function backgroundColour(ray)
 {
-        return new Vec3(0.3,0.5,0.9) // Blue
+    let white = new Vec3(1, 1, 1)
+    let blue = new Vec3(0.3,0.5,0.9)
+    t = 0.5 * (ray.direction.y + 1.0)
+    return white.scale(1-t).add(blue.scale(t))
 }
 
 // Returns the colour the ray should have as a Vec3 with RGB values in [0,1]
@@ -120,7 +188,11 @@ function rayColour(ray)
 {
     let castResult = traceRay(ray)
     if(castResult.t < 0) return backgroundColour(ray)
-    return new Vec3(1,0,0) // Red
+
+    let albedo = spheres[castResult.sphereIndex].colour
+    let diffuse = Math.max(castResult.normal.dot(negLightDirection), 0)
+    let colour = albedo.scale(diffuse)
+    return colour
 }
 
 // Sets a pixel at (x, y) in the canvas with an RGB Vec3
@@ -142,7 +214,19 @@ const spheres = new Array(
 // Main code
 let imageWidth = document.getElementById("canvas").width
 let imageHeight = document.getElementById("canvas").height
-let aspectRatio = document.getElementById("canvas").height / document.getElementById("canvas").width
+let aspectRatio = imageHeight / imageWidth
+
+let viewportWidth = 2
+let viewportHeight = viewportWidth * aspectRatio
+let focalLength = 1.0
+
+let camPosition = new Vec3(0, 0, 0)
+let horizontal = new Vec3(viewportWidth, 0, 0)
+let vertical = new Vec3(0, viewportHeight, 0)
+let lowerLeftCorner = camPosition.minus(horizontal.scale(0.5)).minus(vertical.scale(0.5)).minus(new Vec3(0, 0, focalLength))
+
+let lightDirection = new Vec3(-1.1, -1.3, -1.5).normalised();
+let negLightDirection = new Vec3(-lightDirection.x, -lightDirection.y, -lightDirection.z)
 
 let colour = new Vec3(0,0,0)
 
@@ -150,6 +234,11 @@ for (let i = 0; i < imageWidth; i++)
 {
     for (let j = 0; j <= imageHeight; j++)
     {
+        let u = i / (imageWidth - 1)
+        let v = j / (imageHeight - 1)
+
+        let ray = new Ray(camPosition, lowerLeftCorner.add(horizontal.scale(u)).add(vertical.scale(v)).minus(camPosition))
+        colour = rayColour(ray).scale(255)
         setPixel(i,j,colour)
     }
 }
